--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <h2 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span
                     class="text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">¿como?</span>
                 nuestra estretagia</h2>
-            <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
+            <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400 px-4">
                 Tras investigar exhaustivamente los desafíos que enfrentan la mayoría de las empresas, hemos llegado a
                 una conclusión reveladora: son pocos los que logran destacarse en línea. Esto se debe a la falta de
                 inversión en una estrategia de marketing sólida y a la ausencia de un embudo de ventas y un proceso
