--- a/src/css/pages/servicio.html
+++ b/src/css/pages/servicio.html
@@ -9,6 +9,7 @@
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
 </head>
+
 <body>
     <!-- navbar -->
 
@@ -62,55 +63,39 @@
 
 
     <section
-        class="bg-center bg-no-repeat bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/conference.jpg')] bg-gray-700 bg-blend-multiply">
+        class=" bg-center bg-no-repeat bg-gray-700 bg-blend-multiply" style="background-image: url('https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/pexels-lukas-574071.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BleGVscy1sdWthcy01NzQwNzEuanBnIiwiaWF0IjoxNzExNjMxOTMyLCJleHAiOjE3NDMxNjc5MzJ9.kwj6HrQjXntT9PlYZMu3q_NFH5Jkd5u_IDf7XJTEN8Q&t=2024-03-28T13%3A18%3A52.190Z')">
         <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
             <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
-                Alcanza hoy tus metas: pasa al otro nivel</h1>
-            <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-52">el mundo Digital ya no va a
-                ser tu problema con Nuestra Ayuda: Estrategias de marketing digital Comprobadas y Resultados
-                Garantizados para Llevar Tu Negocio al Siguiente Nivel.
+                ¿Diferenciarse? con nuestro servicio es posible</h1>
+            <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-52">el mundo Digital es nuestro
+                espacio, nos centramos en ofrecerte crecimiento, visibilidad y conocer realmente quien sos en linea.
             </p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
                 <a href="https://w.app/tflRnm"
                     class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-violet-400 hover:bg-violet-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-                    Quiero subir de nivel
+                    ¡Comenza!
                     <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                         fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M1 5h12m0 0L9 1m4 4L9 9" />
                     </svg>
                 </a>
-                <a href="#"
-                    class="inline-flex justify-center hover:text-gray-900 items-center py-3 px-5 sm:ms-4 text-base font-medium text-center text-white rounded-lg border border-white hover:bg-gray-100 focus:ring-4 focus:ring-gray-400">
-                    Nuestra estrategia
-                </a>
             </div>
         </div>
     </section>
 
     <!-- Introducción -->
-    <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10">
-        <div class="grow w-screen self-center px-3 md:px-6">
+    <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
+        <div class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
 
-            <h2 class="text-4xl font-extrabold dark:text-white">Frustración</h2>
-            <p class="my-4 text-lg text-gray-500">Nos encontramos en un momento en el que hay un gran problema,
+            <h2 class="text-4xl font-extrabold dark:text-white">Desarrollo web</h2>
+            <p class="my-4 text-lg text-gray-500">Si no tenes página, ¿con que pensas que se encuentra tu cliente? Tal
+                vez tenes un sitio, pero sin ninguna optimización ni objetivo claro, con nuestro servicio obetndras lo
+                que muchos quieren hoy:
                 <span
-                    class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">estancamiento</span>,
-                ¿qué provoca esto? <br>
-                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
-                    Frustración
-                </span> <br>
-                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
-                    Impotencia
-                </span> <br>
-                <span
-                    class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400 mt-8">
-                    Conformismo
-                </span>
-            </p>
-            <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">nos especializamos en impulsar el éxito
-                de tu negocio y sacar estas sensaciones de la ecuación. Como tu socio de crecimiento, estamos
-                comprometidos a ofrecerte soluciones integrales y efectivas para llevar tu empresa al siguiente nivel
+                    class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">Presencia
+                    solida en línea</span>
+
             </p>
             <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
                 Contactanos
@@ -122,41 +107,164 @@
             </a>
 
         </div>
-        <div class="w-screen px-2 border-b-4 border-black md:mx-4">
+        <div class="w-52 px-2  md:mx-4">
 
             <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
-                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/Layer%204.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL0xheWVyIDQucG5nIiwiaWF0IjoxNzEwOTQyMjI2LCJleHAiOjE3NDI0NzgyMjZ9.b2rvhYV7Wt4uriHiKdiOXucerPAAQaYJwbNV9fMwL8w&t=2024-03-20T13%3A43%3A45.214Z"
+                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/develop-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2RldmVsb3Atc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzExNjI5NTU4LCJleHAiOjE3NDMxNjU1NTh9.pKn4Qh2XI9JPLd-VhxDQ4qBSC2VIIK6Ez7e4jWLIbd4&t=2024-03-28T12%3A39%3A17.865Z"
                 alt="image description">
 
         </div>
         </div>
     </section>
+    <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
+    <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
+        <div class="w-52 px-2  md:mx-4 order-2 md:order-1">
 
+            <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
+                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/funnel-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2Z1bm5lbC1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTE2MzAzMDUsImV4cCI6MTc0MzE2NjMwNX0.q5AZy0CbS0BFPX6njY1ZUlbcjHfnbQpGTKv4Sy0x9x0&t=2024-03-28T12%3A51%3A44.286Z"
+                alt="image description">
 
- 
-        <!-- cta -->
-<section>
-
-
-    <section class="bg-white dark:bg-gray-900 flex flex-col md:flex md:flex-row md:px-4 justify-center">
-        <div class="py-8 mx-auto max-w-screen-xl text-center lg:py-16 md:grow md:w-96 md:self-center md:order-1 order-2 px-4">
-            <h2 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">¿Estas listo?</h2>
-            <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-20 dark:text-gray-400">Es el momento de avanzar, de cambiar y destacarte, no dudes más y inverti en algo que de verdad puede darte la vuelta que necesitas.</p>
-            <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
-                <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-violet-400 hover:bg-violet-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-                    Conversemos
-                    <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                    </svg>
-                </a>
-            </div>
         </div>
-        <div class="order-1 md:order-2">
-            <img class="w-56 md:w-96 px-10 mx-auto" src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/growth-report-graph-svgrepo-com(1).svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2dyb3d0aC1yZXBvcnQtZ3JhcGgtc3ZncmVwby1jb20oMSkuc3ZnIiwiaWF0IjoxNzExMjk0MTI0LCJleHAiOjE3NDI4MzAxMjR9.sF3GbewdPFExfZIqy3A5FzT9R0IgNBou6NsxoYIV2tk&t=2024-03-24T15%3A28%3A44.203Z" alt="svg crecimiento">
+        <div class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
+
+            <h2 class="text-4xl font-extrabold dark:text-white">Embudo de ventas</h2>
+            <p class="my-4 text-lg text-gray-500">Hoy en dia hay que pensar en el proceso por el que pasan tus clientes,
+                no es facil entender y comprender como accionan, pero si tenes un proceso diseñado con diferentes fases,
+                te aseguro que lograras no solo mejores resultados, lograras algo muy preciado:
+                <span
+                    class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">Entender
+                    por los procesos y dudas por las que pasa tu lead</span>
+
+            </p>
+            <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
+                Contactanos
+                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M1 5h12m0 0L9 1m4 4L9 9" />
+                </svg>
+            </a>
+
+        </div>
         </div>
     </section>
-    
-</section>
+    <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
+    <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
+        <div class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
+
+            <h2 class="text-4xl font-extrabold dark:text-white">Campañas de anuncios</h2>
+            <p class="my-4 text-lg text-gray-500">¡Hace que tu negocio destaque en línea! Aumenta tu visibilidad y atrae
+                a más clientes con campañas de publicidad paga, utilizamos Google Ads y tambien tenemos mucho
+                conocimiento en las plataformas de META. ¡Tene resultados tangibles y ROI garantizado!
+
+            </p>
+            <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
+                Contactanos
+                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M1 5h12m0 0L9 1m4 4L9 9" />
+                </svg>
+            </a>
+
+        </div>
+        <div class="w-52 px-2  md:mx-4">
+
+            <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
+                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/marketing-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL21hcmtldGluZy1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTE2MzA5NDMsImV4cCI6MTc0MzE2Njk0M30.qd6kTAzjJyRifJ89tCQUym4saaqRxqlAJETt6O585N4&t=2024-03-28T13%3A02%3A23.192Z"
+                alt="image description">
+
+        </div>
+        </div>
+    </section>
+    <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
+    <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
+        <div class="w-52 px-2  md:mx-4 order-2 md:order-1">
+
+            <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
+                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/plant-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BsYW50LXN2Z3JlcG8tY29tLnN2ZyIsImlhdCI6MTcxMTYzMTAyOCwiZXhwIjoxNzQzMTY3MDI4fQ.zMyVGKBfAviPKuVlbraUubJc81NfQmsoyy48OcHk_GA&t=2024-03-28T13%3A03%3A48.192Z"
+                alt="image description">
+
+        </div>
+        <div class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
+
+            <h2 class="text-4xl font-extrabold dark:text-white">Nutrición</h2>
+            <p class="my-4 text-lg text-gray-500">Tenemos las mejoras estrategias de nutrición, estrategias que tienen
+                resultados, no te vamos a asegurar tus resultados, la calidad de tu contenido es clave, pero con nuestra
+                ayuda obtendras las claves para que tu contenido y lo que le des de "comer" a tus clientes sea
+                rrealmente bueno y de calidad
+            </p>
+            <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
+                Contactanos
+                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M1 5h12m0 0L9 1m4 4L9 9" />
+                </svg>
+            </a>
+
+        </div>
+        </div>
+    </section>
+    <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
+    <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
+        <div class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
+
+            <h2 class="text-4xl font-extrabold dark:text-white">Analisis</h2>
+            <p class="my-4 text-lg text-gray-500">Con nuestro servicio no es solo una propuesta de estrategias que funcionan, sino que nos importa algo que mucha gente tiene miedo a decir, en cualquier servicio hay errores, ¿te imaginas como es en el mundo digital? Si te estan vendiendo servicios sin errores es mentira, los errores estan y para eso nos especializamos en ofrecer un servicio 100% transparente en el que se trabaja a partir de analitica de datos, el problema no son los errores, sino que como se acciona ante ellos.
+            </p>
+            <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
+                Contactanos
+                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M1 5h12m0 0L9 1m4 4L9 9" />
+                </svg>
+            </a>
+
+        </div>
+        <div class="w-52 px-2  md:mx-4">
+
+            <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
+                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/data-analysis-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2RhdGEtYW5hbHlzaXMtc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzExNjMxNDMwLCJleHAiOjE3NDMxNjc0MzB9.iAZqufAZNWlGucm3b4aPQKNHTeHg1yuTu7zSse-4-a8&t=2024-03-28T13%3A10%3A29.574Z"
+                alt="image description">
+
+        </div>
+        </div>
+    </section>
+    <!-- cta -->
+    <section>
+
+
+        <section class="bg-white dark:bg-gray-900 flex flex-col md:flex md:flex-row md:px-4 justify-center">
+            <div
+                class="py-8 mx-auto max-w-screen-xl text-center lg:py-16 md:grow md:w-96 md:self-center md:order-1 order-2 px-4">
+                <h2
+                    class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
+                    ¿Estas listo?</h2>
+                <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-20 dark:text-gray-400">Es el
+                    momento de avanzar, de cambiar y destacarte, no dudes más y inverti en algo que de verdad puede
+                    darte la vuelta que necesitas.</p>
+                <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
+                    <a href="#"
+                        class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-violet-400 hover:bg-violet-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
+                        Conversemos
+                        <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M1 5h12m0 0L9 1m4 4L9 9" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <div class="order-1 md:order-2">
+                <img class="w-56 md:w-96 px-10 mx-auto"
+                    src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/growth-report-graph-svgrepo-com(1).svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2dyb3d0aC1yZXBvcnQtZ3JhcGgtc3ZncmVwby1jb20oMSkuc3ZnIiwiaWF0IjoxNzExMjk0MTI0LCJleHAiOjE3NDI4MzAxMjR9.sF3GbewdPFExfZIqy3A5FzT9R0IgNBou6NsxoYIV2tk&t=2024-03-24T15%3A28%3A44.203Z"
+                    alt="svg crecimiento">
+            </div>
+        </section>
+
+    </section>
     <!-- footer -->
 
 
@@ -263,4 +371,5 @@
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 </body>
+
 </html>
