--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../output.css" />
+    <link rel="stylesheet" href="../src/css/output.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description"
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
@@ -42,7 +43,7 @@
                 <ul
                     class="flex flex-col font-medium md:p-0 mb-3 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 dark:border-gray-700">
                     <li>
-                        <a href="/index.html" class="block py-2 px-3 md:p-0 rounded md:bg-transparent"
+                        <a href="../index.html" class="block py-2 px-3 md:p-0 rounded md:bg-transparent"
                             aria-current="page">Inicio</a>
                     </li>
                     <li>
@@ -63,7 +64,7 @@
 
 
     <section
-        class=" bg-center bg-no-repeat bg-gray-700 bg-blend-multiply" style="background-image: url('https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/pexels-lukas-574071.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BleGVscy1sdWthcy01NzQwNzEuanBnIiwiaWF0IjoxNzExNjMxOTMyLCJleHAiOjE3NDMxNjc5MzJ9.kwj6HrQjXntT9PlYZMu3q_NFH5Jkd5u_IDf7XJTEN8Q&t=2024-03-28T13%3A18%3A52.190Z')">
+        class="h-screen bg-center bg-no-repeat bg-gray-700 bg-blend-multiply" style="background-image: url('https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/pexels-lukas-574071.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BleGVscy1sdWthcy01NzQwNzEuanBnIiwiaWF0IjoxNzExNjMxOTMyLCJleHAiOjE3NDMxNjc5MzJ9.kwj6HrQjXntT9PlYZMu3q_NFH5Jkd5u_IDf7XJTEN8Q&t=2024-03-28T13%3A18%3A52.190Z')">
         <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
             <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
                 ¿Diferenciarse? con nuestro servicio es posible</h1>
@@ -85,8 +86,8 @@
     </section>
 
     <!-- Introducción -->
-    <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
-        <div class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
+    <section class="flex flex-col md:flex-row md:gap-10 md:justify-between h-full mt-10 mb-10  mx-auto">
+        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Desarrollo web</h2>
             <p class="my-4 text-lg text-gray-500">Si no tenes página, ¿con que pensas que se encuentra tu cliente? Tal
@@ -107,7 +108,7 @@
             </a>
 
         </div>
-        <div class="w-52 px-2  md:mx-4">
+        <div data-aos="fade-down" data-aos-delay="200" class="w-52 px-2  md:mx-4 mx-auto">
 
             <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
                 src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/develop-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2RldmVsb3Atc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzExNjI5NTU4LCJleHAiOjE3NDMxNjU1NTh9.pKn4Qh2XI9JPLd-VhxDQ4qBSC2VIIK6Ez7e4jWLIbd4&t=2024-03-28T12%3A39%3A17.865Z"
@@ -118,14 +119,14 @@
     </section>
     <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
     <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
-        <div class="w-52 px-2  md:mx-4 order-2 md:order-1">
+        <div data-aos="fade-down" data-aos-delay="200" class="w-52 px-2  md:mx-4 order-2 md:order-1 mx-auto">
 
             <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
                 src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/funnel-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2Z1bm5lbC1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTE2MzAzMDUsImV4cCI6MTc0MzE2NjMwNX0.q5AZy0CbS0BFPX6njY1ZUlbcjHfnbQpGTKv4Sy0x9x0&t=2024-03-28T12%3A51%3A44.286Z"
                 alt="image description">
 
         </div>
-        <div class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
+        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Embudo de ventas</h2>
             <p class="my-4 text-lg text-gray-500">Hoy en dia hay que pensar en el proceso por el que pasan tus clientes,
@@ -150,7 +151,7 @@
     </section>
     <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
     <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
-        <div class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
+        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Campañas de anuncios</h2>
             <p class="my-4 text-lg text-gray-500">¡Hace que tu negocio destaque en línea! Aumenta tu visibilidad y atrae
@@ -168,7 +169,7 @@
             </a>
 
         </div>
-        <div class="w-52 px-2  md:mx-4">
+        <div data-aos="fade-down" data-aos-delay="200" class="w-52 px-2  md:mx-4 mx-auto">
 
             <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
                 src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/marketing-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL21hcmtldGluZy1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTE2MzA5NDMsImV4cCI6MTc0MzE2Njk0M30.qd6kTAzjJyRifJ89tCQUym4saaqRxqlAJETt6O585N4&t=2024-03-28T13%3A02%3A23.192Z"
@@ -179,14 +180,14 @@
     </section>
     <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
     <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
-        <div class="w-52 px-2  md:mx-4 order-2 md:order-1">
+        <div data-aos="fade-down" data-aos-delay="200" class="w-52 px-2  md:mx-4 order-2 md:order-1 mx-auto">
 
             <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
                 src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/plant-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BsYW50LXN2Z3JlcG8tY29tLnN2ZyIsImlhdCI6MTcxMTYzMTAyOCwiZXhwIjoxNzQzMTY3MDI4fQ.zMyVGKBfAviPKuVlbraUubJc81NfQmsoyy48OcHk_GA&t=2024-03-28T13%3A03%3A48.192Z"
                 alt="image description">
 
         </div>
-        <div class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
+        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Nutrición</h2>
             <p class="my-4 text-lg text-gray-500">Tenemos las mejoras estrategias de nutrición, estrategias que tienen
@@ -208,7 +209,7 @@
     </section>
     <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
     <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
-        <div class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
+        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Analisis</h2>
             <p class="my-4 text-lg text-gray-500">Con nuestro servicio no es solo una propuesta de estrategias que funcionan, sino que nos importa algo que mucha gente tiene miedo a decir, en cualquier servicio hay errores, ¿te imaginas como es en el mundo digital? Si te estan vendiendo servicios sin errores es mentira, los errores estan y para eso nos especializamos en ofrecer un servicio 100% transparente en el que se trabaja a partir de analitica de datos, el problema no son los errores, sino que como se acciona ante ellos.
@@ -223,7 +224,7 @@
             </a>
 
         </div>
-        <div class="w-52 px-2  md:mx-4">
+        <div data-aos="fade-down" data-aos-delay="200" class="w-52 px-2  md:mx-4 mx-auto">
 
             <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
                 src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/data-analysis-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2RhdGEtYW5hbHlzaXMtc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzExNjMxNDMwLCJleHAiOjE3NDMxNjc0MzB9.iAZqufAZNWlGucm3b4aPQKNHTeHg1yuTu7zSse-4-a8&t=2024-03-28T13%3A10%3A29.574Z"
@@ -370,6 +371,11 @@
 
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <script src="../node_modules/aos/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
