--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/output.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description"
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
@@ -46,7 +47,7 @@
                             aria-current="page">Inicio</a>
                     </li>
                     <li>
-                        <a href="./src/css/pages/servicio.html"
+                        <a href="./pages/servicio.html"
                             class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 d:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Servicios</a>
                     </li>
                     <li>
@@ -123,10 +124,10 @@
             </a>
 
         </div>
-        <div class="w-screen px-2 border-b-4 border-black md:mx-4">
+        <div data-aos="fade-up" data-aos-duration="1000" class="w-2/4 px-2 border-b-4 border-black md:mx-4">
 
-            <img class="h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
-                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/Layer%204.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL0xheWVyIDQucG5nIiwiaWF0IjoxNzEwOTQyMjI2LCJleHAiOjE3NDI0NzgyMjZ9.b2rvhYV7Wt4uriHiKdiOXucerPAAQaYJwbNV9fMwL8w&t=2024-03-20T13%3A43%3A45.214Z"
+            <img class="mx-auto h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
+                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/angry-man-svgrepo-com(1).svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2FuZ3J5LW1hbi1zdmdyZXBvLWNvbSgxKS5zdmciLCJpYXQiOjE3MTE3Mzg1MzAsImV4cCI6MTc0MzI3NDUzMH0.gxYOR7xxmfiJ0vFLKtt87lAgXwvJasGDC7e0DRXLMzY&t=2024-03-29T18%3A55%3A30.905Z"
                 alt="image description">
 
         </div>
@@ -410,6 +411,10 @@
 
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <script src="./node_modules/aos/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
