--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-    <script src="./node_modules/aos/dist/aos.js"></script>
+    <script src="node_modules/aos/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
